[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "dcTrackClient"
version = "0.3.0"
authors = [
  { name="Nicolas Ventura", email="ventura@lbl.gov" },
]
description = "Sunbird dcTrack API client in Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/nicfv/dcTrackClient/"
"Bug Tracker" = "https://github.com/nicfv/dcTrackClient/pulls"