[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "dcTrackClient"
version = "0.3.2"
authors = [
  { name="Nicolas Ventura", email="ventura@lbl.gov" },
]
description = "Sunbird dcTrack API client in Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE"}

[project.urls]
"Homepage" = "https://github.com/nicfv/dcTrackClient/"
"Bug Tracker" = "https://github.com/nicfv/dcTrackClient/pulls"